# dexios2

./: Cargo.toml  Dockerfile
.github/: CI.yml  codacy.yml  dependabot.yml
.github/workflows/: auto-maintenance.yml  clippy.yml  codacy.yml  devskim.yml  rust-clippy analyze.yml  rustversion.yml
dexios/: Cargo.toml
dexios-core/: Cargo.toml
dexios-core/src/: key.rs
dexios-domain/: Cargo.toml
dexios-domain/src/: decrypt.rs  encrypt.rs  hash.rs  overwrite.rs  pack.rs  storage.rs
dexios-gui/: Cargo.toml
dexios-gui/src/: app.rs  main.rs  operations.rs  secure_string.rs  ui.rs
dexios/src/: cli.rs  subcommands.rs
dexios/src/global/: parameters.rs  states.rs
