[package]
name = "dexios-core"
description = "A library for encrypting/decrypting, password hashing, and for managing encrypted file headers that adhere to the Dexios format."
version = "1.2.0"
readme = "README.md"
authors = ["Voornaamenachternaam"]
homepage = "https://github.com/Voornaamenachternaam/dexios"
repository = "https://github.com/Voornaamenachternaam/dexios/tree/master/dexios-core"
documentation = "https://docs.rs/dexios-core/latest/dexios_core/"
categories = ["cryptography", "encoding", "data-structures"]
rust-version = "1.88.0"
keywords = ["encryption", "secure"]
edition = "2024"
license = "BSD-2-Clause"

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
visual = ["indicatif"]

[dependencies]
# for errors, only temporary
anyhow = "1.0.97"

# AEADS
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
deoxys = { version = "0.1.0" }
aead = { version = "0.5.2", features = ["stream"] }

# for wiping sensitive information from memory
zeroize = "1.8.1"

# for password hashing
argon2 = "0.5.0"
balloon-hash = "0.4.0"
blake3 = { version = "1.6.1", features = ["traits-preview"] }

# for generating random bytes
rand = "0.9.0"

indicatif = { version = "0.17.11", optional = true }
