[package]
name = "dexios-domain"
description = "A library that contains the inner-workings and core logic for Dexios."
version = "1.0.1"
edition = "2024"
rust-version = "1.87.0"
license = "BSD-2-Clause"
keywords = ["encryption", "secure"]
categories = ["cryptography", "encoding", "data-structures"]
repository = "https://github.com/Voornaamenachternaam/dexios/tree/master/dexios-domain"
homepage = "https://github.com/Voornaamenachternaam/dexios"
documentation = "https://docs.rs/dexios-domain/latest/dexios_domain/"
readme = "README.md"
authors = ["Voornaamenachternaam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
core = { package = "dexios-core", path = "../dexios-core", version = "1.2.0" }

rand = "0.9.0"
blake3 = "1.6.1"
walkdir = "2.5.0"
zip = { version = "4.1.0", default-features = false, features = ["zstd"] }
