[package]
name = "dexios-gui"
description = "Secure, fast and authenticated file encryption with a GUI frontend."
version = "0.0.0"
edition = "2024"
rust-version = "1.85.1"
license = "BSD-2-Clause"
keywords = ["encryption", "secure"]
categories = ["cryptography"]
repository = "https://github.com/Voornaamenachternaam/dexios/tree/master/dexios-gui"
homepage = "https://github.com/Voornaamenachternaam/dexios"
documentation = "https://Voornaamenachternaam.github.io/dexios"
readme = "README.md"
authors = ["Voornaamenachternaam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
