[package]
name = "dexios"
version = "8.8.1"
authors = ["Voornaamenachternaam"]
readme = "README.md"
edition = "2024"
description = "Secure, fast and authenticated command-line encryption of files with modern algorithms and an audited encryption backend."
keywords = ["encryption", "utility", "file", "command-line", "secure"]
categories = ["cryptography", "command-line-utilities"]
repository = "https://github.com/Voornaamenachternaam/dexios/tree/master/dexios"
homepage = "https://github.com/Voornaamenachternaam/dexios"
documentation = "https://Voornaamenachternaam.github.io/dexios"
license = "BSD-2-Clause"
rust-version = "1.87.0"

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
blake3 = "1.6.1"
rand = "0.9.0"

domain = { package = "dexios-domain", version = "1.0.1", path = "../dexios-domain" }
core = { package = "dexios-core", path = "../dexios-core", version = "1.2.0" }

clap = { version = "4.5.31", features = ["cargo"] }
anyhow = "1.0.97"

zip = { version = "4.2.0", default-features = false, features = ["zstd"] }
rpassword = "7.3"
